    * 31_arm_eabi_fix. Upstream changed arm architecture handling.
      This patch doesn't apply as it is.
    * 91_qmake_lflags_no-undefined. Merged upstream.
  * Update .install files: libqt4-core, libqt4-gui and qt4-dev-tools.
  * Add packages: libqt4-dbus, libqt4-webkit and libqt4-xmlpatterns.
  * Move QtDBus module from libqt4-core in libqt4-dbus package.

 -- Fathi Boudra <fabo@debian.org>  Sat, 01 Mar 2008 18:31:24 +0100

qt4-x11 (4.3.4-1) unstable; urgency=low

  * New upstream release:
    * This version adds the GNU General Public License (GPL) version 3
      to all Qt Open Source editions. The GPL Exception version 1.1
      applies to both versions of the GPL license.

  * Add qt-copy patches:
    * 0205-fast-qpixmap-fill
      Fix a performance issue in QPixmap::fill()
    * 0209-prevent-qt-mixing
      This patch changes QObjectPrivateVersion, thus preventing mixing parts
      of upstream Qt and qt-copy.
    * 0210-fix-crash-q3stylesheet-font-size
      This patch fixes crashs in q3stylesheet
      (it was possible to use a qfont size < 1)
    * 0211-q3action-crash
      During porting qt3to4 port QGroupAction to Q3GroupAction but not QAction
      to Q3Action (which is logical) But it crashs when it's not a q3action.
  * Refresh and enable 0172-prefer-xrandr-over-xinerama patch.
  * Remove 0204-fix-tulip-aliasing patch. Merged upstream.
  * Remove 90_qmake_cxxflags_fpermissive patch.
  * Add ${shlibs:Depends} to libqt4-dev. See missing shared library
    dependencies thread on debian-devel mailing list.
  * Add catalan translation. Thanks to Javier Serrano Polo. (Closes: #459822)
  * Update copyright file. Add GPL version 3.
  * Remove -fpermissive.

 -- Fathi Boudra <fabo@debian.org>  Tue, 26 Feb 2008 18:38:27 +0100

qt4-x11 (4.3.3-2) unstable; urgency=low

  * Update 0203-qtexthtmlparser-link-color qt-copy patch:
    Add qt-bugs@ issue and Trolltech task ID.
  * Add 0204-fix-tulip-aliasing qt-copy patch: