@@ -1,4 +1,8 @@
 usr/lib/libQtSql.so.*
 usr/lib/qt4/plugins/sqldrivers/libqslibase.so
-usr/lib/qt4/plugins/sqldrivers/libqslodbs.so
+usr/lib/qt4/plugins/sqldrivers/libqslmysql.so
+usr/lib/qt4/plugins/sqldrivers/libqslpsql.so
+usr/lib/qt4/plugins/sqldrivers/libqslodbc.so
+usr/lib/qt4/plugins/sqldrivers/libqslsqlite.so
+usr/lib/qt4/plugins/sqldrivers/libqslsqlite2.so
 
