@@ -26,6 +26,7 @@ qt4-x11 (4.4.0~beta1-1) experimental; urgency=low
   * Update .install files: libqt4-core, libqt4-gui and qt4-dev-tools.
   * Add packages: libqt4-dbus, libqt4-webkit and libqt4-xmlpatterns.
   * Move QtDBus module from libqt4-core in libqt4-dbus package.
+  * Enable SQL drivers as plugins.
 
  -- Fathi Boudra <fabo@debian.org>  Sat, 01 Mar 2008 18:31:24 +0100
 
